finished the resume section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">A<span class="text-primary">d</span>i</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -37,19 +37,19 @@
          <div class="about-info-container">
             <div class="about-info">
                 <h4 class="info-title">Name:</h4>
-                <description> Mary Hardy </description>
+                <description> Abrar Tanjil </description>
             </div>
             <div class="about-info">
                 <h4 class="info-title">Email:</h4>
-                <description> info@gmail.com</description>
+                <description> abrartanjilpc@gmail.com</description>
             </div>
             <div class="about-info">
                 <h4 class="info-title">Date of birth:</h4>
-                <description>11 November 1987</description>
+                <description>30 August 2007</description>
             </div>
             <div class="about-info">
                 <h4 class="info-title">From:</h4>
-                <description> Los Angeles, USA</description>
+                <description> Dhaka , Bangladesh</description>
             </div>
         </div>
         
@@ -111,8 +111,7 @@
                         <h3 class="resume-item-institute"></h3>
                         <p class="resume-item-description"></p>
                     </div>
-                    
-h
+
                 </div>
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
@@ -134,6 +133,9 @@ h
                         <p class="resume-item-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                 </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
 
